# ASTra-MCP

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  NOTICE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  START_HERE.md  WHAT_IS_ASTRA.md  install.sh  mcp.json  pyproject.toml  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.github/: GITHUB_REPO_SETUP.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
astra/cli/: main.py
astra/daemon/: core.py  runner.py
astra/dashboard/: index.html  server.py  snapshot.py
astra/federation/: resolver.py
astra/graph/: pagerank.py  schema.sql  store.py
astra/impact/: analyzer.py
astra/indexer/: embedder.py  graph_builder.py  parser.py  symbol_table.py
astra/mcp/: server.py  tools.py
astra/memory/: session.py
astra/query/: engine.py  serializer.py
astra/semantics/: drift.py
astra/temporal/: indexer.py
astra/watcher/: monitor.py
benchmarks/: token_reduction.py
docs/: demo.html  index.html
tests/: test_daemon.py  test_drift.py  test_federation.py  test_impact.py  test_temporal.py
