[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-mcp"
version = "0.1.0"
description = "AST-powered knowledge graph for AI coding agents. Cuts token usage 93% by injecting only relevant code context."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Narra Satya Sai Charan" }]
keywords = ["ai", "coding-agents", "claude", "mcp", "ast", "knowledge-graph", "code-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.urls]
Repository = "https://github.com/your-org/astra-mcp"
Documentation = "https://github.com/your-org/astra-mcp#readme"
Issues = "https://github.com/your-org/astra-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
astra = "astra.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["astra"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (black handles this)
