[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-mcp"
version = "1.0.0"
description = "MCP server giving Claude Code, Cursor, Codex and Windsurf permanent AST-powered code memory. 98.9% token reduction. 100% local."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Narra Satya Sai Charan", email = "nsatyasaicharan@gmail.com" }]
keywords = [
    "mcp", "model-context-protocol", "claude-code", "cursor", "codex", "windsurf",
    "ai-coding-assistant", "code-intelligence", "ast", "knowledge-graph",
    "pagerank", "semantic-search", "codebase-memory", "token-reduction",
    "tree-sitter", "code-analysis", "llm-tools", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://ast-ra-mcp.vercel.app"
Repository = "https://github.com/Charan-place/ASTra-MCP"
Documentation = "https://github.com/Charan-place/ASTra-MCP#readme"
Issues = "https://github.com/Charan-place/ASTra-MCP/issues"
Changelog = "https://github.com/Charan-place/ASTra-MCP/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
astra = "astra.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["astra"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (black handles this)
